@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-11T00:56:14Z",
+  "timestamp" : "2022-06-11T08:13:39Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 355,
-  "uniques" : 191,
+  "count" : 356,
+  "uniques" : 192,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
